<resources>
    <string name="app_name">jbarclay-HabitTracker</string>
    <string name="action_settings">Settings</string>
    <string name="todayHeader">Today\'s habits</string>
    <string name="addHabitButton">Add New Habit</string>
    <string name="allHabits">View all habits</string>
    <string name="completeHabit">Habit completed</string>
    <string name="removeHistory">A piece of history has been deleted.</string>
    <string name="edit_your_habit">Edit your Habit</string>
    <string name="habit_name_hint">What do you want to make a habit?</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="history">History</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="save_history">Save History</string>
    <string name="noName">The habit name must contain at least 1 character.</string>
</resources>